[tool.poetry]
name = "discord-bridge"
version = "0.1.0"
description = "Matrix-Discord bridge"
authors = ["Benjamin Herman <benjamin@metanomial.com>"]
license = "MIT"
readme = "readme.md"
packages = [{include = "discord_bridge"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.1"
black = "^22.12.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
